--- a/css/style.css
+++ b/css/style.css
@@ -1,45 +1,257 @@
-.tituloPrincipal{
-    padding-left: 30px;
+body{
+    font-family: 'Montserrat', sans-serif;
+
 }
 
-.principal{
-    background-color: #cccccc;
-    padding: 20px;
+header{
+    background-color: #BBBBBB;
+    padding: 20px 0;
 }
-#banner{
+.caja{
+    width: 940px;
+    position: relative;
+    margin: 0 auto;
+}
+nav{
+    position:absolute;
+    top: 110px;
+    right: 0;
+}
+
+nav li{
+    display: inline;
+    margin: 0 0 0 15px;
+
+}
+
+nav a{
+    text-transform: uppercase;
+    color: #000000;
+    font-weight: bold;
+    font-size: 22px;
+    text-decoration: none;
+}
+
+nav a:hover{
+    color: #c78c19;
+    text-decoration: underline;
+}
+.productos{
+    width: 940px;
+    margin: 0 auto;
+    padding: 50px;
+}
+
+.productos li{
+    display: inline-block;
+    text-align: center;
+    width: 30%;
+    vertical-align: top;
+    margin: 0 1.5%;
+    padding: 30px 20px;
+    box-sizing: border-box;
+    border: 2px solid #000000;
+    border-radius: 8%;
+
+}
+
+.productos li:hover{
+    border-color: #c78c19;
+    
+}
+
+.productos li:active{
+    border-color: #088c19;
+}
+
+.productos h2{
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.productos li:hover h2{
+    font-size: 33px;
+}
+
+.prod-descrip{
+    font-size: 18px;
+
+}
+
+.prod-precio{
+    font-size: 20px;
+    font-weight: bold;
+    margin-top: 10px;
+
+}
+
+footer{
+    text-align: center;
+    background: url(/img/bg.jpg);
+    padding: 40px;
+    
+}
+
+.copyrigth{
+    color:#ffffff;
+    font-size: 13px;
+    margin: 20px;
+}
+
+.formulario{
+    width: 940px;
+    margin: 0 auto;
+}
+form{
+    margin: 40px 0;
+}
+form label, form legend{
+    display: block;
+    font-size: 20px;
+    margin: 0 0 10px;
+}
+
+.input-padron{
+    display: block;
+    margin: 0 0 20px;
+    padding: 10px 25px;
+    width: 50%;
+}
+
+.checkbox{
+    margin: 20px 0;
+}
+
+.enviar{
+    width: 40%;
+    padding: 15px 0px;
+    font-size: 18px;
+    font-weight: bold;
+    color: white;
+    background: orange;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: 1s ;
+}
+
+.enviar:hover{
+    background: darkorange;
+    transform: scale(1.1);
+}
+
+table{
+    margin: 40px 40px;
+
+}
+thead{
+    background: #555555;
+    color:white ;
+    font-weight: bold;
+}
+
+td,th{
+    border: 1px solid #000000;
+    padding: 8px 15px;
+}
+
+
+/* css para nuestra pagina inicial HOME */
+.principal{
+    padding: 3em;
+    background: #fefefe;
+}
+.banner{
     width: 100%;
 }
 
-p{
+.titulo-principal{
     text-align: center;
+    font-size: 2em;
+    margin: 0 0 1em;
+    clear: left;
 }
 
-em strong{
-    color: red;
+
+.principal strong{
+    font-weight: bold;
 }
 
-#mision{
-    font-size: 20px;
+.principal em{
+    font-style: italic;
+    width: 940px;
+    margin: 0 auto;  
+}
+.utensillos{
+    width: 120px;
+    float: left;
+    margin: 0 20px 20px 0;
+}
+.mapa{
+    padding: 3em 0;
+    background: linear-gradient(#eeeeee,#888888) ;
 }
 .diferenciales{
-    background-color: white;
-    padding: 30px;
+    padding: 3em 0;
+    background: #888888;
 }
-.tituloCentralizado{
+.mapa p{
+    margin: 0 0 2em;
     text-align: center;
 }
-.items{
-    font-style: italic;
+.mapa-contenido{
+    width: 940px;
+    margin: 0 auto;
 }
+.contenido-diferenciales{
+    width: 640px;
+    margin: 0 auto;
 
-.listaDif{
+}
+.lista-dif{
+    width: 40%;
     display: inline-block;
     vertical-align: top;
-    width: 20%;
-    margin-right: 15%;
+}
+.items{
+    line-height: 1.5;
+}
+.items::before{
+    content: "★";
+}
+.items:first-child{
+    font-weight: bold;
+}
+.imagen-dif{
+    width: 60%;
+    transition: 400ms;
+    box-shadow: 10px 10px 10px 5px black;
 }
 
-.imagenDiferenciales{
-    width: 50%;
+.imagen-dif:hover{
+    opacity: 0.3;
 }
+.video{
+    width: 560px;
+    margin: 1em auto;
+}
+
+/* RESPONSIVE */
+@media screen and (max-width:480px){
+    h1{
+        text-align: center;
+    }
+    nav{
+        position: static;
+    }
+
+    .caja, .principal, .mapa-contenido,.contenido-diferenciales, .video {
+        width: auto;
+    }
+    .lista-dif, .imagen-dif{
+        width: 100%;
+    }
+    
+}
+
 
